Added a function